corrected main file in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "main": "dist/alpine-modal.js",
+  "main": "dist/alpinejs-modal.js",
   "name": "alpinejs-modal",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "repository": {
     "type": "git",
     "url": "git://github.com/octoper/alpinejs-modal.git"
