changed name & added README and LICENSE

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "main": "dist/alpinejs-modal.js",
-  "name": "alpinejs-modal",
+  "main": "dist/alpinejs-focus-modal.js",
+  "name": "alpinejs-focus-modal",
   "version": "0.0.2",
   "repository": {
     "type": "git",
-    "url": "git://github.com/octoper/alpinejs-modal.git"
+    "url": "git://github.com/octoper/alpinejs-focus-modal.git"
   },
   "scripts": {
     "build": "npx rollup -c"
